<resources>
    <string name="app_name_label">Soneca</string>
    <string name="app_name">SonecaApp</string>
    <string name="title_home">Mapa</string>
    <string name="title_dashboard">Alarmes</string>
    <string name="title_settings">Condigurações</string>
    <string name="info_location_permission">Este aplicativo precisa usar a sua localização.</string>
    <string name="text_enable_localization">Permitir localização</string>
    <string name="text_places">Lugares</string>
    <string name="label_title">Título</string>
    <string name="label_distance">Distância</string>
    <string name="label_frequency">Frequência</string>
    <string name="label_day_of_week">Dia da semana</string>
    <string name="label_initial_time">Horário inicial</string>
    <string name="label_end_time">Horário final</string>
    <string name="first_letter_sunday">D</string>
    <string name="first_letter_monday">S</string>
    <string name="first_letter_tuesday">T</string>
    <string name="first_letter_wednesday">Q</string>
    <string name="first_letter_thursday">Q</string>
    <string name="first_letter_friday">S</string>
    <string name="first_letter_saturday">S</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="msg_error_text_empty">Por favor, preencha todos os campos!</string>
    <string name="baseline_notification_add_icon">Notification_add</string>
    <string name="msg_error_days_not_selected">Selecione o(s) dia(s) da semana.</string>
    <string name="ball">Ball</string>
    <string name="icon_alarm_on">Icone alarme ativado</string>
    <string name="initial_time">A partir das</string>
    <string name="days_of_week_alarm">Dias da semana</string>
    <string name="day_of_week_alarm">Dia da semana</string>
    <string name="activated">Ativado</string>
    <string name="distance_current">Distância atual</string>
    <string name="off">Desligado</string>
    <string name="no_alarms_scheduled">Nenhum alarme agendado</string>
    <string name="you_arrived">Você chegou</string>
    <string name="down">Desligar</string>
    <string name="alarm_content_text">Você está próximo do seu destino</string>
    <string-array name="days_of_week_names">
        <item name="MONDAY">Domingo</item>
        <item name="SUNDAY">Segunda-feira</item>
        <item name="TUESDAY">Terça-feira</item>
        <item name="WEDNESDAY">Quarta-feira</item>
        <item name="THURSDAY">Quinta-feira</item>
        <item name="FRIDAY">Sexta-feira</item>
        <item name="SATURDAY">Sábado</item>
    </string-array>
</resources>