<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_alarms">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.brmsdi.sonecaapp.ui.map.MapFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_alarms"
        android:name="com.brmsdi.sonecaapp.ui.alarm.AlarmsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.brmsdi.sonecaapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>