<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_alarms"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/background_card_alarm_0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/text_title"
            style="@style/cardTextStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="21dp"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_status"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/baseline_alarm_off_24"
            android:contentDescription="@string/icon_alarm_on"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/circle"
            app:layout_constraintStart_toStartOf="@id/circle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_status_label"
            style="@style/cardTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/circle"
            app:layout_constraintStart_toStartOf="@id/circle"
            app:layout_constraintTop_toBottomOf="@id/icon_status" />

        <TextView
            android:id="@+id/text_days_label"
            style="@style/cardTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/text_title"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <TextView
            android:id="@+id/text_days"
            style="@style/cardTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/text_title"
            app:layout_constraintTop_toBottomOf="@id/text_days_label" />

        <TextView
            android:id="@+id/text_current_distance"
            style="@style/cardTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_distance_label"
            app:layout_constraintEnd_toEndOf="@id/text_distance_label"
            app:layout_constraintStart_toStartOf="@id/text_distance_label" />

        <TextView
            android:id="@+id/text_distance_label"
            style="@style/cardTextStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="@string/distance_current"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_title" />

        <TextView
            android:id="@+id/text_time"
            style="@style/cardTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text_time_label"
            app:layout_constraintEnd_toEndOf="@id/text_time_label"
            app:layout_constraintStart_toStartOf="@id/text_time_label" />

        <TextView
            android:id="@+id/text_time_label"
            style="@style/cardTextStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_initial_time"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@id/text_distance_label"
            app:layout_constraintEnd_toStartOf="@id/circle"
            app:layout_constraintStart_toEndOf="@id/text_distance_label"
            app:layout_constraintTop_toTopOf="@id/text_distance_label" />

        <ImageView
            android:id="@+id/circle"
            android:layout_width="105dp"
            android:layout_height="0dp"
            android:contentDescription="@string/ball"
            android:src="@drawable/circle_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>